syntax = "proto3";
package yokai_client;

option go_package = "github.com/yokaiio/yokai_server/proto/client";

message ClientInfo {
    int64 id = 1;
    string name = 2;
}

message MC_ClientLogon {
  int64 client_id = 1;
  string client_name = 2;
}

message MS_ClientLogon {
}



message MC_HeartBeat {

}

message MS_HeartBeat {
    uint32  timestamp = 1;
}

message MC_ClientConnected {
    int64 client_id = 1;
    string name = 2;
}

message MC_ClientDisconnect {

}

////////////////////////////////////////////////
// player
message MC_ChangeExp {
    int64 add_exp = 1;
}

message MS_ExpUpdate {
    int64 exp = 1;
}

message MC_ChangeLevel {
    int32 add_level = 1;
}

message MS_LevelUpdate {
    int32 level = 1;
}
